--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -113,13 +113,13 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.reactnativestarter"
+    namespace 'com.anonymous.reactnativestarter'
     defaultConfig {
-        applicationId "com.reactnativestarter"
+        applicationId 'com.anonymous.reactnativestarter'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.1"
     }
 
     splits {
